--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -3559,7 +3559,7 @@ A_v=\frac{v_o}{v_s}=\frac{-R_C}{\frac{R_B}{\beta+1}+r_e+R_E}
 
 حل:شکل \حوالہ{شکل_ٹرانزسٹر_داخلی_مزاحمت_سے_افزائش_مساوی} میں بدلتی رو مساوی دور دکھایا گیا ہے۔شکل  ب میں داخلی مزاحمت
 \begin{align*}
-R_i =\left(100+1 \right) \times \left(25+1000 \right) \approx \SI{100}{\kilo \ohm}
+R_i =\left(100+1 \right) \times \left(25+1000 \right) = \SI{103.5}{\kilo \ohm}
 \end{align*}
 ہے۔شکل  الف   میں سادہ داخلی دور دکھایا گیا ہے  جہاں
 \begin{align*}
