mistakes in fig texts

--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -1583,7 +1583,7 @@ r_o = \frac{50}{10 \times 10^{-3}}=\SI{5}{\kilo \ohm}
 \حصہ{یک سمتی ادوار کا ترسیمی تجزیہ}
 اگرچہ ٹرانزسٹر ادوار کو عموماً الجبرائی طریقہ سے حل کیا جاتا ہے مگر گراف کے استعمال سے بہت گہری سمجھ پیدا ہوتی ہے۔اس طریقہ کو سمجھنے کے بعد ٹرانزسٹر ادوار تخلیق دینے میں آسانی پیدا ہوتی ہے۔ آئیں شکل \حوالہ{شکل_ٹرانزسٹر_کے_یک_سمتی_بار_کا_خط}  میں دئے دور کو گراف کی مدد سے حل کرتے ہیں۔
 
-\جزوحصہ{یک سمتی خطِ بوجھ}
+\جزوحصہ{یک سمتی رو خطِ بوجھ}
 شکل \حوالہ{شکل_ٹرانزسٹر_کے_یک_سمتی_بار_کا_خط}  میں، بدلتے اشارہ  \عددی{v_s} کو نظر انداز کرتے ہوئے، ٹرانزسٹر دور کے داخلی جانب ہم لکھ سکتے ہیں۔
 \begin{align}
 V_{BB}=i_B R_B + v_{BE}
@@ -1612,7 +1612,7 @@ V_{CC}=i_C R_C + v_{CE}
 
 
 \جزوحصہ{باریک اشارات}
-آئیں اب شکل \حوالہ{شکل_ٹرانزسٹر_کے_یک_سمتی_بار_کا_خط}  میں باریک اشارات پر غور کریں۔باریک اشارہ \عددی{v_s} کے موجودگی میں ٹرانزسٹر کے دخلی جانب کل برقی دباو \عددی{(V_{BB}+v_s)} ہو گا اور ہم اس جانب خطِ بوجھ کی مساوات یوں لکھ سکتے ہیں۔
+آئیں اب شکل \حوالہ{شکل_ٹرانزسٹر_کے_یک_سمتی_بار_کا_خط}  میں باریک اشارات پر غور کریں۔باریک اشارہ \عددی{v_s} کے موجودگی میں ٹرانزسٹر کے داخلی جانب کل برقی دباو \عددی{(V_{BB}+v_s)} ہو گا اور ہم اس جانب خطِ بوجھ کی مساوات یوں لکھ سکتے ہیں۔
 \begin{align}
 V_{BB}+v_s = i_B R_B +v_{BE}
 \end{align}
