corrected headings font and fontsize

--- a/tex/khalidUrduBooksElectronics.sty
+++ b/tex/khalidUrduBooksElectronics.sty
@@ -41,7 +41,7 @@
 \setotherlanguages{english}
 
 
-\newfontfamily\arabicfont[Scale=1.0,Script=Arabic]{Scheherazade}
+\newfontfamily\arabicfont[Scale=1.0,Script=Arabic]{Jameel Noori Nastaleeq}
 \newfontfamily\urduTechTermsfont[Scale=1.0,Script=Arabic]{XB Tabriz Bold}
 \newfontfamily\urdufont[Scale=1.25,WordSpace=60.0,Script=Arabic]{Jameel Noori Nastaleeq}
 \setlength{\parskip}{5mm plus 4mm minus 3mm}
