errors in first half finished

--- a/electronicsLatex.tex
+++ b/electronicsLatex.tex
@@ -12,14 +12,10 @@
 %
 \includeonly{./tex/electronicsSymbols,./tex/electronicsPreface,./tex/prefaceFirstBook,./tex/electronicsOPAMP,./tex/electronicsDiode,./tex/electronicsBJT,./tex/electronicsMOSFET,./tex/electronicsDifferencePair,./tex/electronicsFrequencyResponse,./tex/electronicsFeedback,./tex/electronicsOscillators}     %this decides what is included
 
-%\includeonly{./tex/electronicsSymbols,./tex/electronicsPreface,./tex/prefaceFirstBook,./tex/electronicsBJT}
+%\includeonly{./tex/electronicsSymbols,./tex/electronicsPreface,./tex/prefaceFirstBook,./tex/electronicsMOSFET}
 
 
-\author{
-خالد خان یوسفزئی\\
-{\small {کامسیٹ انسٹیٹیوٹ آف انفارمیشن ٹیکنالوجی، اسلام آباد}}\\
-\texttt{khalidyousafzai@comsats.edu.pk}
-}
+\author{خالد خان یوسفزئی}
 
 \title{مماثل برقیات}
 \date{}                           %if absent gives date in arabic which is a rubbish
