--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -3427,11 +3427,11 @@ A_v=\frac{v_L}{v_i}=\SI{-9.864}{\volt \per \volt}
 \begin{align*}
 \sum R_C&=\SI{5.6}{\kilo \ohm}\\
 \sum R_E&=\frac{R_B}{\beta+1}+\frac{r_{be}}{\beta+1}+R_E=\SI{563.79}{\ohm}\\
-A_v&=-\frac{\sum R_C}{\sum R_E}=-\frac{5600}{563.79}=\SI{-9.933}{\volt \per \volt}
+A_v&=-\alpha \frac{\sum R_C}{\sum R_E}=-\left(\frac{149}{150}\right)\left(\frac{5600}{563.79}\right)=\SI{-9.866}{\volt \per \volt}
 \end{align*}
  حاصل ہوتا ہے۔\عددی{A_v} کے ان دو جوابات میں صرف
 \begin{align*}
-\abs{\frac{9.933-9.864}{9.933}} \times 100=\SI{0.69}{\percent}
+\abs{\frac{9.866-9.864}{9.866}} \times 100=\SI{0.026}{\percent}
 \end{align*}
 کا فرق ہے۔یہ فرق \عددی{I_C \approx I_E} تصور کرنے سے پیدا ہوا۔\عددی{I_C} کی ٹھیک ٹھیک قیمت حاصل کرتے دوبارہ جوابات حاصل کرتے ہیں۔
 \begin{align*}
@@ -3559,23 +3559,23 @@ A_v=\frac{v_o}{v_s}=\frac{-R_C}{\frac{R_B}{\beta+1}+r_e+R_E}
 
 حل:شکل \حوالہ{شکل_ٹرانزسٹر_داخلی_مزاحمت_سے_افزائش_مساوی} میں بدلتی رو مساوی دور دکھایا گیا ہے۔شکل  ب میں داخلی مزاحمت
 \begin{align*}
-R_i =\left(100+1 \right) \times \left(25+1000 \right) = \SI{103.5}{\kilo \ohm}
+R_i =\left(100+1 \right) \times \left(25+1000 \right) = \SI{103.525}{\kilo \ohm}
 \end{align*}
 ہے۔شکل  الف   میں سادہ داخلی دور دکھایا گیا ہے  جہاں
 \begin{align*}
-\SI{80}{\kilo \ohm} \mathbin{\|} \SI{10}{\kilo \ohm} \mathbin{\|} \SI{100}{\kilo \ohm}=\SI{8.16}{\kilo \ohm}
+\SI{80}{\kilo \ohm} \mathbin{\|} \SI{10}{\kilo \ohm} \mathbin{\|} \SI{103.525}{\kilo \ohm}=\SI{8.186}{\kilo \ohm}
 \end{align*}
 لیتے ہوئے
 \begin{align*}
-v_b=\left(\frac{8160}{2000+8160}\right) v_s=0.803 v_s
+v_b=\left(\frac{8186}{2000+8186}\right) v_s=0.8036 v_s
 \end{align*}
 حاصل ہوتا ہے۔شکل  ب سے
 \begin{align*}
-A_v'=\frac{v_o}{v_b}=-\frac{\sum R_C}{\sum R_E}=-\frac{10000}{25+1000}=\SI{-9.756}{\volt \per \volt}
+A_v'=\frac{v_o}{v_b}=-\alpha\frac{\sum R_C}{\sum R_E}\approx -\frac{\sum R_C}{\sum R_E}=-\frac{10000}{25+1000}=\SI{-9.756}{\volt \per \volt}
 \end{align*} 
 حاصل ہوتا ہے۔یوں
 \begin{align*}
-A_v=\frac{v_o}{v_s}=\frac{v_o}{v_b} \times \frac{v_b}{v_s}=-9.756 \times 0.803=\SI{-7.834}{\volt \per \volt}
+A_v=\frac{v_o}{v_s}=\frac{v_o}{v_b} \times \frac{v_b}{v_s}=-9.756 \times 0.8036=\SI{-7.839}{\volt \per \volt}
 \end{align*}
 حاصل ہوتا ہے۔
 \begin{figure}
@@ -3608,7 +3608,7 @@ v_{be} &=\frac{r_{\pi} v_s}{r_{\pi}+R_B}
 \begin{aligned}
 \frac{v_o}{i_c}&=-R_C = \num{-10000}\\
 \frac{i_c}{v_{be}}&=g_m=\num{0.04}\\
-\frac{v_{be}}{v_s}&=\frac{r_{\pi}}{r_{\pi}+R_B}=\frac{2200}{2200+2000}=\num{0.5238}
+\frac{v_{be}}{v_s}&=\frac{r_{\pi}}{r_{\pi}+R_B}=\frac{2000}{2000+2200}=\num{0.4762}
 \end{aligned}
 \end{gather}
 اس مساوات کے پہلی جزو کے بائیں ہاتھ کے دو متغیرات \عددی{v_o} اور \عددی{i_c} کے قیمتیں دور حل کرنے کے بعد ہی ہمیں معلوم ہوتی ہیں جبکہ مساوات کے دائیں ہاتھ پر \عددی{-R_C} کی قیمت \عددی{\num{-10000}} ہمیں دور حل کرنے سے پہلے ہی معلوم ہے۔یوں اگرچہ دور حل کرنے سے پہلے ہمیں نہ تو \عددی{v_o} کی قیمت معلوم ہے اور نا ہی \عددی{i_c} کی، مگر اس مساوات کے تحت ہم جانتے ہیں کہ \عددی{\frac{v_o}{i_c}} ہر صورت \عددی{\num{-10000}} کے برابر ہو گا۔
@@ -3616,7 +3616,7 @@ v_{be} &=\frac{r_{\pi} v_s}{r_{\pi}+R_B}
 
 اسی طرح مندرجہ بالا مساوات کے دوسرے جزو میں بائیں ہاتھ \عددی{i_c} اور \عددی{v_{be}} کی قیمتیں صرف دور حل کرنے کے بعد ہی ہمیں معلوم ہوتی ہیں جبکہ دائیں ہاتھ \عددی{g_m} کی قیمت \عددی{\num{0.04}} ہمیں پہلے سے معلوم ہے۔۔یوں اگرچہ دور حل کرنے سے پہلے ہمیں نہ تو \عددی{i_c} کی قیمت معلوم ہے اور نا ہی \عددی{v_{be}} کی، مگر ہم جانتے ہیں کہ \عددی{\frac{i_c}{v_{be}}} ہر صورت \عددی{\num{0.04}} کے برابر ہو گا۔
 
-اسی طرح مساوات کے تیسرے جزو سے ہم جانتے ہیں کہ \عددی{\frac{v_{be}}{v_s}} کی قیمت ہر صورت \عددی{\num{0.5238}} رہے گی۔
+اسی طرح مساوات کے تیسرے جزو سے ہم جانتے ہیں کہ \عددی{\frac{v_{be}}{v_s}} کی قیمت ہر صورت \عددی{\num{0.4762}} رہے گی۔
 
 آئیں ان معلومات کو زیرِ استعمال لاتے ہوئے \عددی{A_v} حاصل کریں۔جیسے شکل  \حوالہ{شکل_زنجیری_ضرب_الف} میں دکھایا گیا ہے، \عددی{A_v} کو زنجیری ضرب سے یوں لکھا جا سکتا ہے۔
 \begin{align} \label{مساوات_ٹرانزسٹر_زنجیری_ضرب_مثال_الف}
@@ -3624,7 +3624,7 @@ A_v =\frac{v_o}{v_s}= \left (\frac{v_o}{i_c} \right) \times \left (\frac{i_c}{v_
 \end{align}
 مندرجہ بالا مساوات میں تینوں قوسین میں بند تناسب کے قیمتیں مساوات \حوالہ{مساوات_ٹرانزسٹر_شرح_کی_قیمتیں_الف}  میں دی گئی ہیں۔یوں اگرچہ دور حل کرنے سے قبل، مساوات \حوالہ{مساوات_ٹرانزسٹر_زنجیری_ضرب_مثال_الف}  کے دائیں جانب متغیرات (یعنی \عددیء{v_o}، \عددیء{i_c}، \عددی{v_{be}} وغیرہ) کی قیمتیں ہم نہیں جانتے لیکن مساوات \حوالہ{مساوات_ٹرانزسٹر_شرح_کی_قیمتیں_الف}  کی مدد سے ان تینوں نسبت کے قیمتیں ہم جانتے ہیں اور یوں ہم اس سے \عددی{A_v} کی قیمت حاصل کر سکتے ہیں یعنی
 \begin{align}
-A_v = -10000  \times 0.04  \times 0.5238 =\SI[per=frac,fraction=nice]{-209.52}{\volt \per \volt}
+A_v = -10000  \times 0.04  \times 0.4762 =\SI[per=frac,fraction=nice]{-190}{\volt \per \volt}
 \end{align}
 	زنجیری ضرب لکھتے وقت مندرجہ ذیل نقاط یاد رکھیں۔
 \begin{enumerate}
@@ -3795,7 +3795,7 @@ R_{m2}&=\SI{62.5}{\kilo \ohm}
 \begin{align*}
 \frac{v_o}{i_c}&=-R_{m2}=\num{-62500}\\
 \frac{i_c}{v_{be}}&=g_m=\num{0.004064}\\
-\frac{v_{be}}{v_b}&=\frac{r_{be}}{r_{be}+(\beta+1)R_E}=\frac{44045}{440405+(179+1) \times 15000}=\num{0.01605}\\
+\frac{v_{be}}{v_b}&=\frac{r_{be}}{r_{be}+(\beta+1)R_E}=\frac{44045}{44045+(179+1) \times 15000}=\num{0.01605}\\
 \frac{v_b}{v_s}&=\frac{R_{m1}}{R_{m1}+R_S}=\frac{245238.6}{245238.6+5000}=\num{0.980019}
 \end{align*}
 اور یوں
@@ -4048,7 +4048,7 @@ A_i =\frac{i_L}{i_i}=-30 =-120 \left(\frac{R_c}{R_c+R_L}\right) \left(\frac{r_{b
 \begin{align*}
 \frac{1}{2}&=\left(\frac{r_{be}}{r_{be}+5000 \mathbin{\|} R_b} \right)
 \end{align*}
-اس مساوات میں دو نا معلوم متغیرات ہیں لہٰذا کسی ایک کی قیمت خود چنی ہو گی۔اگر \عددی{R_b=\SI{5}{\kilo \ohm}} رکھی جائے تب \عددی{r_{be}=\SI{2.5}{\kilo \ohm}} حاصل ہوتا ہے۔اگر \عددی{R_b \to \infty} تصور کی جائے تب \عددی{r_{be}=\SI{5}{\kilo \ohm}} حاصل ہوتا ہے۔آپ دیکھ سکتے ہیں کہ \عددی{R_b}  تبدیل کرنے سے \عددی{r_{be}} کی قیمت پر خاص اثر نہیں ہوتا۔یوں ہم \عددی{R_b=\SI{5}{\kilo \ohm}} اور  \عددی{r_{be}=\SI{2.5}{\kilo \ohm}} رکھتے ہیں۔مساوات \حوالہ{مساوات_ٹرانزسٹر_مخارج_قابو_مزاحمت_کی_شرح} کی مدد سے  \عددی{R_e=\SI{416}{\ohm}} حاصل ہوتا ہے۔چونکہ \عددی{r_{be}=\tfrac{\beta}{g_m}} یعنی \عددی{\tfrac{\beta V_T}{I_{CQ}}} ہوتا ہے لہٰذا \عددی{I_{CQ}=\SI{1.2}{\milli \ampere}} حاصل ہوتا ہے۔
+اس مساوات میں دو نا معلوم متغیرات ہیں لہٰذا کسی ایک کی قیمت خود چننی ہو گی۔اگر \عددی{R_b=\SI{5}{\kilo \ohm}} رکھی جائے تب \عددی{r_{be}=\SI{2.5}{\kilo \ohm}} حاصل ہوتا ہے۔اگر \عددی{R_b \to \infty} تصور کی جائے تب \عددی{r_{be}=\SI{5}{\kilo \ohm}} حاصل ہوتا ہے۔آپ دیکھ سکتے ہیں کہ \عددی{R_b}  تبدیل کرنے سے \عددی{r_{be}} کی قیمت پر خاص اثر نہیں ہوتا۔یوں ہم \عددی{R_b=\SI{5}{\kilo \ohm}} اور  \عددی{r_{be}=\SI{2.5}{\kilo \ohm}} رکھتے ہیں۔مساوات \حوالہ{مساوات_ٹرانزسٹر_مخارج_قابو_مزاحمت_کی_شرح} کی مدد سے  \عددی{R_e=\SI{416}{\ohm}} حاصل ہوتا ہے۔چونکہ \عددی{r_{be}=\tfrac{\beta}{g_m}} یعنی \عددی{\tfrac{\beta V_T}{I_{CQ}}} ہوتا ہے لہٰذا \عددی{I_{CQ}=\SI{1.2}{\milli \ampere}} حاصل ہوتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{loadlineDesignExample}
@@ -4444,8 +4444,8 @@ R_i'=\SI{8.34}{\kilo \ohm}
 \begin{align*}
 A_v=\frac{v_L}{v_s}&=\frac{v_L}{v_B} \times \frac{v_B}{v_s}\\
 &=\frac{R_E'}{r_{be}+R_E'} \times \frac{R_1 \mathbin{\|} R_2 \mathbin{\|} \left(r_i+R_E' \right)}{r_i+[R_1 \mathbin{\|} R_2 \mathbin{\|} \left(r_{be}+R_E' \right)]}\\
-&=\frac{100000}{1000+100000} \times \frac{8340}{5000+8340}\\
-&=0.99 \times 0.625\\
+&=\frac{100000}{1000+100000} \times \frac{8367}{5000+8367}\\
+&=0.99 \times 0.6259\\
 &=\SI[per =frac,fraction=nice]{0.619}{\volt \per \volt}
 \end{align*}
 \انتہا{مثال}
@@ -4557,12 +4557,12 @@ R_1 \mathbin{\|} R_2 \mathbin{\|} \left[r_{be}+\left(\beta+1 \right) R_E\right]
 \begin{align*}
 R_1 \mathbin{\|} R_2 \mathbin{\|} \left[r_{be}+\left(\beta+1 \right) R_E\right] =\SI{900}{\ohm}
 \end{align*}
-جبکہ دی گئی قیمتوں سے \عددی{R_E=\SI{471}{\ohm}'} حاصل کرتے ہوئے شکل  ب میں 
+جبکہ دی گئی قیمتوں سے \عددی{R_E'=\SI{476}{\ohm}} حاصل کرتے ہوئے شکل  ب میں 
 \begin{align*}
 R_i'&=\frac{\frac{r_{be} R_E'}{R_3} +r_{be}+\left(\beta+1\right)R_E' }{\frac{r_{be}}{R_3}+1}\\
-&=\frac{\frac{1000\times 471}{10000} +1000+\left(99+1\right)471 }{\frac{1000}{10000}+1}\\
-&=\frac{47.1 +1000+47100 }{0.1+1}\\
-&=\SI{43.77}{\kilo \ohm}
+&=\frac{\frac{1000\times 476}{10000} +1000+\left(99+1\right)476 }{\frac{1000}{10000}+1}\\
+&=\frac{47.6 +1000+47600 }{0.1+1}\\
+&=\SI{44.2}{\kilo \ohm}
 \end{align*}
 حاصل ہوتا ہے جو کہ سادہ کلکٹر  مشترک ایمپلیفائر کی \عددی{\SI{900}{\ohm}} کے داخلی مزاحمت سے بہت زیادہ ہے۔اس جواب سے یہ حقیقت بھی سامنے آتی ہے کہ \عددی{\tfrac{r_{be}}{R_3}} اور \عددی{\tfrac{r_{be}R_E'}{R_3}} دو نظر انداز کیا جا سکتا ہے لہٰذا مساوات \حوالہ{مساوات_ٹرانزسٹر_کلکٹر _مشترک_زیادہ_داخلی_مزاحمت} کو
 \begin{align}\label{مساوات_ٹرانزسٹر_کلکٹر _مشترک_زیادہ_داخلی_مزاحمت_الف}
