--- a/tex/electronicsMOSFET.tex
+++ b/tex/electronicsMOSFET.tex
@@ -261,7 +261,7 @@ iL&=-\left[\frac{\epsilon \mu_n W}{d} \right ] \left[\left(v_{GS}-V_t \right ) v
 i&=-\left[\frac{\epsilon \mu_n}{d} \right ] \left[\frac{W}{L} \right ] \left[ \left(v_{GS}-V_t \right ) v_{DS}-\frac{v_{DS}^{2}}{2}\right ]
 \end{aligned}
 \end{gather}
-منفی برقی رو کا مطلب ہے کہ یہ بڑھتے \عددی{x} کے الٹ جانب رواں ہے یعنی ڈرین سے سورس جانب۔ماسفیٹ میں اسی جانب برقی رو کو \عددی{i_{DS}} لکھا جاتا ہے۔یوں
+منفی برقی رو کا مطلب ہے کہ یہ بڑھتے \عددی{x} کے الٹ جانب رواں ہے یعنی ڈرین سے سورس جانب۔ماسفیٹ میں اسی جانب برقی رو کو \عددی{i_{DS}} لکھا جاتا ہے۔یوں درج ذیل حاصل ہوتا ہے۔
 \begin{align}
 i_{DS}=\left[ \frac{\epsilon \mu_n}{d}\right ] \left[  \frac{W}{L}\right ] \left[\left (v_{GS}-V_t \right )v_{DS}-\frac{v_{DS}^{2}}{2} \right ]
 \end{align}
@@ -583,7 +583,7 @@ v_{GS}-v_{DS}<V_t
 لہٰذا گھٹاتا ماسفیٹ افزائندہ ہے اور یوں
 \begin{align*}
 i_{DS}&=\frac{k_n}{2} \left[v_{GS}-V_t \right]^2 \\
-&=\frac{0.1 \times 10^{-3}}{2} \times \left[(-2.8)-(-3.2) \right]\\
+&=\frac{0.1 \times 10^{-3}}{2} \times \left[(-2.8)-(-3.2) \right]^{2}\\
 &=\SI{8}{\micro \ampere}
 \end{align*}
 \item
@@ -767,7 +767,7 @@ V_{GS}&=10-4700 I_{DS}\\
 شکل \حوالہ{شکل_ماسفیٹ_کے_یک_سمتی_ادوار_الف} پ میں
 \begin{align*}
 k_n&=\SI{0.15}{\milli \ampere \volt^{-2}}\\
-V_t&=\SI{3.5}{\volt}\\
+V_t&=\SI{3}{\volt}\\
 V_{DD}&=\SI{10}{\volt}
 \end{align*}
 ہیں۔برقی رو \عددی{I_{DS}=\SI{0.6}{\milli \ampere}} حاصل کرنے کی خاطر  \عددی{R_{D}} کی قیمت دریافت کریں۔
@@ -917,7 +917,7 @@ V_{GD}&=V_G -V_D = (6)-\left(12-6800I_{DS} \right )=-6+6800I_{DS}
 \begin{align*}
 I_{DS}=\frac{k_n}{2} \left (V_{GS}-V_t \right )^{2}\\
 I_{DS}=\frac{0.1 \times 10^{-3}}{2} \left[\left(6-5600 I_{DS}\right)-2.5 \right ]^2 \\
-3.136 \times 10^{7} I_{DS}^{2}-5.92 \times 10^{4} I_{DS}+12.65=0\\
+3.136 \times 10^{7} I_{DS}^{2}-5.92 \times 10^{4} I_{DS}+12.25=0\\
 I_{DS}=\SI{1.65}{\milli \ampere} , \SI{0.237}{\milli \ampere}
 \end{align*}
 حاصل ہوتا ہے۔ \عددی{\SI{1.65}{\milli \ampere}}  سے 
