--- a/tex/electronicsMOSFET.tex
+++ b/tex/electronicsMOSFET.tex
@@ -945,7 +945,7 @@ V_S&=0.237 \times 10^{-3} \times 5.6 \times 10^{3}=\SI{1.327}{\volt}
 شکل \حوالہ{شکل_ماسفیٹ_کے_یک_سمتی_ادوار_ب} ب میں
 \begin{align*}
 V_{DD}&=\SI{12}{\volt}\\
-R_D&=\SI{10}{\kilo \ohm}\\
+R_D&=\SI{8}{\kilo \ohm}\\
 R_S&=\SI{2}{\kilo \ohm}\\
 V_t&=\SI{2.5}{\volt}\\
 k_n&=\SI{0.2}{\milli \ampere \volt \squared}
@@ -974,9 +974,9 @@ i_{DS}=\tfrac{k_n}{2} v_{DS}^2
 12&=v_{DS}+10000 i_{DS}\\
 &=v_{DS}+10000 \times \frac{0.2 \times 10^{-3}}{2} v_{DS}^2
 \end{align*}
-حاصل ہوتا ہے۔اس دو درجی مساوات سے \عددی{v_{DS}=\SI{3}{\volt}} حاصل ہوتا ہے۔اس کا دوسرے جواب \عددی{\SI{-4.5}{\volt}} ہے جسے رد کیا جاتا ہے چونکہ \عددی{v_{DS}} منفی ممکن نہیں۔حاصل \عددی{v_{DS}} سے \عددی{i_{DS}=\SI{0.9}{\milli \ampere}} حاصل ہوتا ہے۔
+حاصل ہوتا ہے۔اس دو درجی مساوات سے \عددی{v_{DS,\text{دبوچ}}=\SI{3}{\volt}} حاصل ہوتا ہے۔اس کا دوسرا جواب \عددی{\SI{-4}{\volt}} ہے جسے رد کیا جاتا ہے چونکہ \عددی{v_{DS,\text{دبوچ}}} منفی ممکن نہیں۔حاصل \عددی{v_{DS,\text{دبوچ}}} سے \عددی{i_{DS,\text{دبوچ}}=\SI{0.9}{\milli \ampere}} حاصل ہوتا ہے۔
 
-ماسفیٹ ایمپلیفائر \اصطلاح {خطِ بوجھ} پر چہل قدمی کرتا ہے۔جیسے شکل میں دکھایا گیا ہے، ماسفیٹ اس وقت تک افزائندہ رہتا ہے جب تک \عددی{v_{DS}}  کی قیمت \عددی{v_{DSدبوچ}} سے زیادہ ہو۔یوں ماسفیٹ کا \عددی{v_{DS}} تین وولٹ سے کم نہیں رکھا جا سکتا لہٰذا
+ماسفیٹ ایمپلیفائر \اصطلاح {خطِ بوجھ} پر چہل قدمی کرتا ہے۔جیسے شکل میں دکھایا گیا ہے، ماسفیٹ اس وقت تک افزائندہ رہتا ہے جب تک \عددی{v_{DS}}  کی قیمت\عددی{v_{DS,\text{دبوچ}}} سے زیادہ ہو۔یوں ماسفیٹ کا \عددی{v_{DS}} تین وولٹ سے کم نہیں رکھا جا سکتا لہٰذا
 \begin{align*}
 \SI{3}{\volt} \le v_{DS} < \SI{12}{\volt}\\
 0 < i_{DS} < \SI{0.9}{\milli \ampere}
@@ -1422,16 +1422,17 @@ i_d&=i_s=i_{ds}=g_m v_{gs}
 \ابتدا{مثال}
 ایک دور جسے شکل \حوالہ{شکل_ماسفیٹ_کے_یک_سمتی_ادوار_ب} ب میں دکھایا گیا ہے کا تجزیہ کرتے ہوئے مندرجہ ذیل معلومات حاصل کئے جاتے ہیں۔
 \begin{align*}
-V_{DD}&=\SI{12}{\volt}\\
+V_{DD}&=\SI{15}{\volt}\\
 R_D&=\SI{6.8}{\kilo \ohm}\\
-R_S&=\SI{5.6}{\kilo \ohm}\\
-R_{G1}&=R_{G2}=\SI{10}{\mega \ohm}
+R_S&=\SI{560}{\ohm}\\
+R_{G1}&=\SI{10}{\mega \ohm}\\
+R_{G2}&=\SI{15}{\mega\ohm}
 \end{align*}
 ہیں۔مزید اس کے گیٹ پر \عددی{V_G=\SI{6}{\volt}} جبکہ سورس پر \عددی{V_S=\SI{0.81}{\volt}} ناپے جاتے ہیں۔ساتھ ہی ساتھ باریک اشاراتی برقی دباو کی افزائش \عددی{A_v=\SI{-6.8}{\volt \per \volt}} ناپی جاتی ہے جہاں خارجی اشارے کو ڈرین سے لیا گیا۔استعمال کئے گئے ماسفیٹ کی \عددی{k_n} اور \عددی{V_t} حاصل کریں۔
 
 حل:اُوہم کے قانون سے
 \begin{align*}
-I_{DS}=\frac{V_S}{R_S}=\frac{0.81}{5600}=\SI{1.4464}{\milli \ampere}
+I_{DS}=\frac{V_S}{R_S}=\frac{0.81}{560}=\SI{1.4464}{\milli \ampere}
 \end{align*}
 حاصل ہوتا ہے۔ساتھ ہی ساتھ
 \begin{align*}
@@ -1453,7 +1454,7 @@ V_{GS}=V_G-V_S=6-0.81=\SI{5.19}{\volt}
 
 شکل کو دیکھتے ہوئے
 \begin{align*}
-V_D=V_DD-I_{DS} R_D=15-1.4464 \times 10^{-3} \times 6800=\SI{5.16}{\volt}
+V_D=V_{DD}-I_{DS} R_D=12-1.4464 \times 10^{-3} \times 6800=\SI{2.16}{\volt}
 \end{align*}
 لکھا جا سکتا ہے۔یوں
 \begin{align*}
@@ -1506,7 +1507,7 @@ r_o=\frac{V_A}{I_{DS}}=\frac{60}{0.625 \times 10^{-3}}=\SI{96}{\kilo \ohm}
 \end{figure}
 \عددی{R_G} سے گزرتے برقی رو کو نظر انداز کرتے ہوئے
 \begin{align*}
-v_L& \approx -g_m v_{gs} \left(r_o \mathbin{\|} R_D \mathbin{\|} R_L \right)\\
+v_L& \approx -g_m v_{gs} \overbrace{\left(r_o \mathbin{\|} R_D \mathbin{\|} R_L \right)}^{\SI{5.647}{\kilo\ohm}}\\
 &=-2.823 v_{gs}
 \end{align*}
 حاصل ہوتا ہے۔چونکہ \عددی{v_{gs}} اور \عددی{v_s} برابر ہیں لہٰذا 
@@ -1871,12 +1872,12 @@ R_D &=\frac{15-9}{5 \times 10^{-3}}=\SI{1.2}{k \ohm}
 \end{align*}
 حاصل ہوتا ہے۔
 
-چونکہ \عددی{(V_{G}-V_{D}=4-9=-5)} ہے جو کہ \عددی{V_p} سے کم ہے لہٰذا فیٹ افزائندہ خطے میں ہے۔یوں مساوات \حوالہ{مساوات_منفی_فیٹ_افزائندہ} کے تحت
+چونکہ \عددی{(V_{G}-V_{D}=\SI{4}{\volt}-\SI{9}{\volt}=\SI{-5}{\volt})} ہے جو کہ \عددی{V_p} سے کم ہے لہٰذا فیٹ افزائندہ خطے میں ہے۔یوں مساوات \حوالہ{مساوات_منفی_فیٹ_افزائندہ} کے تحت
 \begin{align*}
 5 \times 10^{-3}&=8 \times 10^{-3} \left(1-\frac{V_{GS}}{-3} \right)^2 \\
-V_{GS}&=\SI{-0.628}{V}
+V_{GS}&=\SI{-0.628}{V}, \SI{-5.37}{\volt}
 \end{align*}
-یعنی
+حاصل ہوتا ہے۔منفی جواب کو رد کرتے ہوئے
 \begin{align*}
 V_{GS}&=V_G-V_S=\SI{-0.628}{V} \\
 V_S&=\SI{4.628}{V}
@@ -1884,7 +1885,7 @@ V_S&=\SI{4.628}{V}
 حاصل ہوتا ہے۔جس سے
 \begin{align*}
 V_S &=I_{DS} R_S \\
-R_S&=\frac{4.628}{5 \times 10^{-3}}=\SI{925}{\ohm}
+R_S&=\frac{4.628}{5 \times 10^{-3}}=\SI{925.6}{\ohm}
 \end{align*}
 حاصل ہوتا ہے۔
 
