added a figure that wat was too far

--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -1033,7 +1033,7 @@ I_{B1}&=\frac{I_{E1}}{\beta_1+1}=\frac{12.39 \times 10^{-6}}{39+1}=\SI{309.7}{\n
 
 %=========
 \ابتدا{مثال} \شناخت{مثال_ٹرانزسٹر_مختلف_افزائش_پر_یکسمتی_متغیرات_کا_حصول}
-تصور کریں کہ شکل \حوالہ{شکل_تینوں_سروں_پر_مزاحمت}  میں
+شکل \حوالہ{شکل_تینوں_سروں_پر_مزاحمت_دوبارہ} کے دور میں
 \begin{align*} 
 V_{CC}&=\SI{12}{\volt}\\ 
 V_{BB}&=\SI{2.7}{\volt}\\ 
@@ -1051,7 +1051,12 @@ R_B &=\SI{100}{\kilo \ohm}
 \زیرنوشت{\beta}{}{کمتر} اور \زیرنوشت{\beta}{}{بلندتر} پر بھی \عددی{I_C} اور \عددی{V_{CE}} کی قیمتیں حاصل کریں۔
 \end{enumerate}
 
-
+\begin{figure}
+\centering
+\includegraphics[scale=0.90]{transistorCircuitWithRb}
+\caption{مثال \حوالہ{مثال_ٹرانزسٹر_مختلف_افزائش_پر_یکسمتی_متغیرات_کا_حصول} کا دور۔}
+\label{شکل_تینوں_سروں_پر_مزاحمت_دوبارہ}
+\end{figure}
 حل:
 \begin{enumerate}
 \item
@@ -4564,7 +4569,7 @@ R_i'&=\frac{\frac{r_{be} R_E'}{R_3} +r_{be}+\left(\beta+1\right)R_E' }{\frac{r_{
 &=\frac{47.6 +1000+47600 }{0.1+1}\\
 &=\SI{44.2}{\kilo \ohm}
 \end{align*}
-حاصل ہوتا ہے جو کہ سادہ کلکٹر  مشترک ایمپلیفائر کی \عددی{\SI{900}{\ohm}} کے داخلی مزاحمت سے بہت زیادہ ہے۔اس جواب سے یہ حقیقت بھی سامنے آتی ہے کہ \عددی{\tfrac{r_{be}}{R_3}} اور \عددی{\tfrac{r_{be}R_E'}{R_3}} دو نظر انداز کیا جا سکتا ہے لہٰذا مساوات \حوالہ{مساوات_ٹرانزسٹر_کلکٹر _مشترک_زیادہ_داخلی_مزاحمت} کو
+حاصل ہوتا ہے جو کہ سادہ کلکٹر  مشترک ایمپلیفائر کی \عددی{\SI{900}{\ohm}} کے داخلی مزاحمت سے بہت زیادہ ہے۔اس جواب سے یہ حقیقت بھی سامنے آتی ہے کہ \عددی{\tfrac{r_{be}}{R_3}} اور \عددی{\tfrac{r_{be}R_E'}{R_3}} کو نظر انداز کیا جا سکتا ہے لہٰذا مساوات \حوالہ{مساوات_ٹرانزسٹر_کلکٹر _مشترک_زیادہ_داخلی_مزاحمت} کو
 \begin{align}\label{مساوات_ٹرانزسٹر_کلکٹر _مشترک_زیادہ_داخلی_مزاحمت_الف}
 R_i' \approx  r_{be}+\left(\beta+1\right)R_E' 
 \end{align}
