--- a/tex/electronicsFrequencyResponse.tex
+++ b/tex/electronicsFrequencyResponse.tex
@@ -2244,7 +2244,7 @@ s^n+c_{n-1} s^{n-1}+c_{n-2} s^{n-2}+\cdots+c_2 s^2+c_1 s+c_0
 \begin{align}\label{مساوات_تعددی_ردعمل_جفت_تسلسل}
 \left(s^2+2 \zeta_1 \omega_1 s+\omega_1^2 \right)\left(s^2+2 \zeta_2 \omega_2 s+\omega_2^2 \right) \cdots
 \end{align}
-جہاں \عددیء{\zeta_m} اور \عددیء{\omega_m} دو درجی کلیات    کے مستقل ہیں۔\عددیء{\zeta_m} کو \اصطلاح{دھیماپن کا مستقل}\فرہنگ{مستقل!دھیماپن}\حاشیہب{damping constant}\فرہنگ{damping constant} اور \عددیء{\omega_m} کو \اصطلاح{آزاد قدرتی تعدد}\فرہنگ{قدرتی تعدد!آزاد}\حاشیہب{undamped natural frequency}\فرہنگ{natural frequency!undamped} کہا جاتا ہے۔طاق \عددیء{n} یعنی \عددیء{n=1,3,5,\cdots} کی صورت میں
+جہاں \عددیء{\zeta_m} اور \عددیء{\omega_m} دو درجی کلیات    کے مستقل ہیں۔\عددیء{\zeta_m} کو \اصطلاح{تقصیری مستقل}\فرہنگ{تقصیری مستقل}\حاشیہب{damping constant}\فرہنگ{damping constant} اور \عددیء{\omega_m} کو \اصطلاح{غیر تقصیری قدرتی تعدد}\فرہنگ{قدرتی تعدد!غیر تقصیری}\حاشیہب{undamped natural frequency}\فرہنگ{natural frequency!undamped} کہا جاتا ہے۔طاق \عددیء{n} یعنی \عددیء{n=1,3,5,\cdots} کی صورت میں
  \عددیء{\left(s^2+2 \zeta_m \omega_m s+\omega_m^2 \right)} طرز کے \عددیء{\tfrac{n-1}{2}} دو درجی کلیات اور ایک عدد \عددیء{\left(s+\omega_0 \right)} کو آپس میں ضرب دیتے ہوئے اسی تسلسل کو یوں لکھا جا سکتا ہے۔
 \begin{align}\label{مساوات_تعددی_ردعمل_طاق_تسلسل}
 \left(s+\omega_0 \right)\left(s^2+2 \zeta_1 \omega_1 s+\omega_1^2 \right)\left(s^2+2 \zeta_2 \omega_2 s+\omega_2^2 \right) \cdots
