--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -3063,7 +3063,7 @@ I_B&=\frac{V_{BB}-V_{BE}}{R_B}
 \begin{align}
 I_C = \beta_0 I_B = \beta_0 \left (\frac{V_{BB}-V_{BE}}{R_B} \right )
 \end{align}
-حاصل ہوتا ہے۔یہی جواب \عددی{R_B} کو ٹرانزٹر کے ایمٹر جانب منتقل کرتے ہوئے \عددی{\frac{R_B}{\beta_0}} لکھ کر بھی حاصل کیا جا سکتا تھا یعنی
+حاصل ہوتا ہے۔یہی جواب \عددی{R_B} کو ٹرانزسٹر کے ایمٹر جانب منتقل کرتے ہوئے \عددی{\frac{R_B}{\beta_0}} لکھ کر بھی حاصل کیا جا سکتا تھا یعنی
 \begin{align*}
 I_C=\frac{V_{BB}-V_{BE}}{\left(\frac{R_B}{\beta_0} \right )}
 \end{align*}
