--- a/tex/electronicsMOSFET.tex
+++ b/tex/electronicsMOSFET.tex
@@ -472,7 +472,7 @@ i_{SD}&=0
 \end{gather}
 %==============
 \حصہ{گھٹاتا  \عددی{n} ماسفیٹ}
-\تحریر{nMOSFET} بناتے وقت، اس کے سورس اور ڈرین خطوں کے درمیان سلیکان پتری میں گیٹ کے بالکل نیچے \عددی{n} قسم کے خطے کے اضافہ سے \عددی{n}  قسم کا \اصطلاح {ماسفیٹ!گھٹاتا}\فرہنگ{گھٹاتا ماسفیٹ}\فرہنگ{depletion nMOSFET}\حاشیہب{depletion nMOSFET}  وجود میں آتا ہے۔شکل \حوالہ{شکل_ماسفیٹ_کی_علامتیں} الف میں \عددی{n} قسم کے \اصطلاح {گھٹاتے ماسفیٹ} کی علامت دکھائی گئی ہے۔\اصطلاح {گھٹاتے ماسفیٹ} کی علامت میں راہ کو موٹی لکیر سے ظاہر کیا جاتا ہے۔شکل  الف میں \عددی{n} گھٹاتا ماسفیٹ کی علامت دکھائی گئی ہے۔ساتھ ہی موازنے کی خاطر \عددی{n} بڑھاتے ماسفیٹ کی علامت بھی دکھائی گئی ہے۔ 
+\تحریر{nMOSFET} بناتے وقت، اس کے سورس اور ڈرین خطوں کے درمیان سلیکان پتری میں گیٹ کے بالکل نیچے \عددی{n} قسم کے خطے کے اضافے سے \عددی{n}  قسم کا \اصطلاح {گھٹاتا ماسفیٹ}\فرہنگ{ماسفیٹ!گھٹاتا}\فرہنگ{depletion nMOSFET}\حاشیہب{depletion nMOSFET}  وجود میں آتا ہے۔شکل \حوالہ{شکل_ماسفیٹ_کی_علامتیں} الف میں \عددی{n} قسم کے \اصطلاح {گھٹاتے ماسفیٹ} کی علامت دکھائی گئی ہے۔\اصطلاح {گھٹاتے ماسفیٹ} کی علامت میں راہ کو موٹی لکیر سے ظاہر کیا جاتا ہے۔شکل  الف میں \عددی{n} گھٹاتا ماسفیٹ کی علامت دکھائی گئی ہے۔ساتھ ہی موازنے کی خاطر \عددی{n} بڑھاتے ماسفیٹ کی علامت بھی دکھائی گئی ہے۔ 
 
 \begin{figure}
 \centering
