--- a/tex/electronicsOscillators.tex
+++ b/tex/electronicsOscillators.tex
@@ -354,7 +354,7 @@ j \omega M g_m &=\frac{r+j \omega L}{r_o}+j \omega C \left(r+j \omega L \right) 
 \begin{align}
 \omega_0 = \frac{1}{\sqrt{LC}}
 \end{align}
-جہاں تقریباً کی جگہ برابر کا نشان استعمال کیا گیا ہے۔اس اتفاقی اور دلچسپ نتیجے کے مطابق یہ مرتعش متوازی جڑے \عددیء{LC} کی قدرتی تعدد پر ارتعاش کرتا ہے۔اسی نتیجے کی بنا پر اس مرتعش کو \عددیء{LC} \اصطلاح{ہمسُر مرتعش}\فرہنگ{ہمسر مرتعش}\فرہنگ{مرتعش!ہمسر}\فرہنگ{tuned oscillator}\حاشیہب{tuned oscillator} کہا جاتا ہے۔اس مرتعش کی تعدد کپیسٹر \عددیء{C} کی قیمت تبدیل کرتے ہوئے تبدیل کی جا سکتی ہے۔
+جہاں تقریباً کی جگہ برابر کا نشان استعمال کیا گیا ہے۔اس اتفاقی اور دلچسپ نتیجے کے مطابق یہ مرتعش متوازی جڑے \عددیء{LC} کی قدرتی تعدد پر ارتعاش کرتا ہے۔اسی نتیجے کی بنا پر اس مرتعش کو \عددیء{LC} \اصطلاح{ہمسُر مرتعش}\فرہنگ{ہمسر مرتعش}\فرہنگ{مرتعش!ہمسر}\فرہنگ{oscillator!LC tuned}\حاشیہب{LC tuned oscillator} کہا جاتا ہے۔اس مرتعش کی تعدد کپیسٹر \عددیء{C} کی قیمت تبدیل کرتے ہوئے تبدیل کی جا سکتی ہے۔
 
 مساوات \حوالہ{مساوات_امالہ_کپیسٹر_مرتعش_مساوات} میں خیالی جزو حل کرتے ہوئے کم سے کم \عددیء{g_m} کی قیمت حاصل ہوتی ہے یعنی
 \begin{gather}
