--- a/tex/electronicsOscillators.tex
+++ b/tex/electronicsOscillators.tex
@@ -354,7 +354,7 @@ j \omega M g_m &=\frac{r+j \omega L}{r_o}+j \omega C \left(r+j \omega L \right) 
 \begin{align}
 \omega_0 = \frac{1}{\sqrt{LC}}
 \end{align}
-جہاں تقریباً کی جگہ برابر کا نشان استعمال کیا گیا ہے۔اس اتفاقی اور دلچسپ نتیجے کے مطابق یہ مرتعش متوازی جڑے \عددیء{LC} کی قدرتی تعدد پر ارتعاش کرتا ہے۔اسی نتیجے کی بنا پر اس مرتعش کو \عددیء{LC} \اصطلاح{ہمسُر مرتعش}\فرہنگ{ہمسر مرتعش}\فرہنگ{مرتعش!ہمسر}\فرہنگ{oscillator!LC tuned}\حاشیہب{LC tuned oscillator} کہا جاتا ہے۔اس مرتعش کی تعدد کپیسٹر \عددیء{C} کی قیمت تبدیل کرتے ہوئے تبدیل کی جا سکتی ہے۔
+جہاں تقریباً کی جگہ برابر کا نشان استعمال کیا گیا ہے۔اس اتفاقی اور دلچسپ نتیجے کے مطابق یہ مرتعش متوازی جڑے \عددیء{LC} کی قدرتی \اصطلاح{گمکی تعدد}\فرہنگ{گمکی تعدد}\حاشیہب{resonant frequency}\فرہنگ{resonant frequency} پر ارتعاش کرتا ہے۔اسی نتیجے کی بنا پر اس مرتعش کو \عددیء{LC} \اصطلاح{ہمسُر مرتعش}\فرہنگ{ہمسر مرتعش}\فرہنگ{مرتعش!ہمسر}\فرہنگ{oscillator!LC tuned}\حاشیہب{LC tuned oscillator} کہا جاتا ہے۔اس مرتعش کی تعدد کپیسٹر \عددیء{C} کی قیمت تبدیل کرتے ہوئے تبدیل کی جا سکتی ہے۔
 
 مساوات \حوالہ{مساوات_امالہ_کپیسٹر_مرتعش_مساوات} میں خیالی جزو حل کرتے ہوئے کم سے کم \عددیء{g_m} کی قیمت حاصل ہوتی ہے یعنی
 \begin{gather}
@@ -478,7 +478,7 @@ C_M=C_{bc} \left(1+g_m R \right)
 \end{align*}
 کے برابر ہو گا۔
 
-چونکہ \عددیء{\beta \gg 1} ہوتا ہے لہٰذا \عددیء{\tfrac{n_1}{n_2} \gg 1} ہو گا۔اگر \عددیء{\beta} کی قیمت \عددیء{\tfrac{n_1}{n_2}} سے معمولی زیادہ ہو تب مرتعش سائن نما لہر خارج کرتا ہے۔\عددیء{\beta \gg \tfrac{n_1}{n_2}} کی صورت میں ٹرانزسٹر غیر خطی خطے میں داخلی ہو گا اور یہ مستطیل برقی رو پیدا کرے گا البتہ \عددیء{L} اور \عددیء{C_p} اپنی قدرتی تعدد \عددیء{\omega_o} پر ارتعاش کرتے ہیں لہٰذا مرتعش سائن نما برقی دباو \عددیء{v_o} ہی خارج کرے گا۔
+چونکہ \عددیء{\beta \gg 1} ہوتا ہے لہٰذا \عددیء{\tfrac{n_1}{n_2} \gg 1} ہو گا۔اگر \عددیء{\beta} کی قیمت \عددیء{\tfrac{n_1}{n_2}} سے معمولی زیادہ ہو تب مرتعش سائن نما لہر خارج کرتا ہے۔\عددیء{\beta \gg \tfrac{n_1}{n_2}} کی صورت میں ٹرانزسٹر غیر خطی خطے میں داخلی ہو گا اور یہ مستطیل برقی رو پیدا کرے گا البتہ \عددیء{L} اور \عددیء{C_p} اپنی قدرتی گمکی تعدد \عددیء{\omega_o} پر ارتعاش کرتے ہیں لہٰذا مرتعش سائن نما برقی دباو \عددیء{v_o} ہی خارج کرے گا۔
 %========================
 
 \حصہ{عمومی مرتعش}
@@ -703,7 +703,7 @@ g_m R_m&=\frac{C_2}{C_1'}
 \انتہا{مثال}
 
 \جزوحصہ{قلمی مرتعش}
-ایسا قلم\حاشیہب{crystal} جسے دبانے سے اس کے دو اطراف کے مابین برقی دباو پیدا ہوتا ہے کو \اصطلاح{داب برقی قلم}\فرہنگ{داب برقی قلم}\فرہنگ{piezoelectric crystal}\حاشیہب{piezoelectric crystal} کہتے ہیں۔ \اصطلاح{داب برقی قلم} پر برقی دباو لاگو کرنے سے یہ پھیلتا (یا سکڑتا) ہے۔ایسے \اصطلاح{داب برقی  قلم}  کے قدرتی میکانی تعدد پر برقی دباو فراہم کرتے ہوئے اسے ارتعاش پذیر بنایا جا سکتا ہے۔قلموں کی طبیعیاتی خوبیاں انتہائی مستحکم ہوتی ہیں جو وقت یا حرارت سے بہت کم متاثر ہوتی ہیں۔اسی لئے ایسے قلم کی قدرتی تعدد کی قیمت بھی مستحکم  رہتے ہوئے تبدیل نہیں ہوتی۔اسی خوبی کی بنا پر انہیں عموماً وقت ناپنے کے لئے استعمال کیا جاتا ہے۔\اصطلاح{کوارٹز}\فرہنگ{کوارٹز}\فرہنگ{quartz}\حاشیہب{quartz} گھڑی کا صحیح وقت دکھانا مثالی ہے۔دھاتی ڈبے میں بند، چند کلو ہرٹز \عددیء{\si{\kilo \hertz}} سے کئی میگا ہرٹز \عددیء{\si{\mega \hertz}} تک کے قدرتی تعدد والے کوارٹز کے قلم، منڈی میں عام دستیاب ہیں۔ڈبے پر قلم کی قدرتی تعدد کی قیمت لکھی گئی ہوتی ہے۔
+ایسا قلم\حاشیہب{crystal} جسے دبانے سے اس کے دو اطراف کے مابین برقی دباو پیدا ہوتا ہے کو \اصطلاح{داب برقی قلم}\فرہنگ{داب برقی قلم}\فرہنگ{piezoelectric crystal}\حاشیہب{piezoelectric crystal} کہتے ہیں۔ \اصطلاح{داب برقی قلم} پر برقی دباو لاگو کرنے سے یہ پھیلتا (یا سکڑتا) ہے۔ایسے \اصطلاح{داب برقی  قلم}  کے قدرتی میکانی تعدد پر برقی دباو فراہم کرتے ہوئے اسے ارتعاش پذیر بنایا جا سکتا ہے۔قلموں کی طبیعیاتی خوبیاں انتہائی مستحکم ہوتی ہیں جو وقت یا حرارت سے بہت کم متاثر ہوتی ہیں۔اسی لئے ایسے قلم کی قدرتی گمکی تعدد کی قیمت بھی مستحکم  رہتے ہوئے تبدیل نہیں ہوتی۔اسی خوبی کی بنا پر انہیں عموماً وقت ناپنے کے لئے استعمال کیا جاتا ہے۔\اصطلاح{کوارٹز}\فرہنگ{کوارٹز}\فرہنگ{quartz}\حاشیہب{quartz} گھڑی کا صحیح وقت دکھانا مثالی ہے۔دھاتی ڈبے میں بند، چند کلو ہرٹز \عددیء{\si{\kilo \hertz}} سے کئی میگا ہرٹز \عددیء{\si{\mega \hertz}} تک کے قدرتی گمکی تعدد والے کوارٹز کے قلم، منڈی میں عام دستیاب ہیں۔ڈبے پر قلم کی قدرتی گمکی تعدد کی قیمت لکھی گئی ہوتی ہے۔
   
 \begin{figure}
 \centering
@@ -736,7 +736,7 @@ g_m R_m&=\frac{C_2}{C_1'}
 \end{align*}
 جہاں \عددیء{\frac{1}{j}=-j}  کا استعمال کیا گیا ہے۔
 
-قلم کے دو سروں سے دیکھتے ہوئے \عددیء{L} کے ساتھ \عددیء{C} سلسلہ وار جڑا معلوم ہوتا ہے جبکہ \عددیء{L} کے دو سروں سے دیکھتے ہوئے \عددیء{L} کے ساتھ \عددیء{C_m} متوازی جڑا معلوم ہوتا ہے۔\عددیء{\omega_s^2=\frac{1}{LC}} کو \عددیء{L} اور اس کے ساتھ سلسلہ وار جڑے کپیسٹر \عددیء{C} کی سلسلہ وار قدرتی تعدد جبکہ \عددیء{\omega_m^2=\frac{1}{LC_m}}  کو \عددیء{L} اور اس کے ساتھ متوازی جڑے کپیسٹر \عددیء{C_m} کی متوازی قدرتی تعدد تصور کرتے ہوئے مندرجہ بالا مساوات کو یوں لکھا جا سکتا ہے
+قلم کے دو سروں سے دیکھتے ہوئے \عددیء{L} کے ساتھ \عددیء{C} سلسلہ وار جڑا معلوم ہوتا ہے جبکہ \عددیء{L} کے دو سروں سے دیکھتے ہوئے \عددیء{L} کے ساتھ \عددیء{C_m} متوازی جڑا معلوم ہوتا ہے۔\عددیء{\omega_s^2=\frac{1}{LC}} کو \عددیء{L} اور اس کے ساتھ سلسلہ وار جڑے کپیسٹر \عددیء{C} کی سلسلہ وار قدرتی گمکی تعدد جبکہ \عددیء{\omega_m^2=\frac{1}{LC_m}}  کو \عددیء{L} اور اس کے ساتھ متوازی جڑے کپیسٹر \عددیء{C_m} کی متوازی قدرتی گمکی تعدد تصور کرتے ہوئے مندرجہ بالا مساوات کو یوں لکھا جا سکتا ہے
 \begin{align*}
 \frac{1}{Z}&=\frac{j \omega C'  \left(\omega^2 -\omega_m^2 \right)}{\left(\omega^2 -\omega_s^2 \right)}
 \end{align*}
@@ -744,9 +744,9 @@ g_m R_m&=\frac{C_2}{C_1'}
 \begin{align} \label{مساوات_مرتعش_قلم_رکاوٹ}
 Z=\frac{-j \left(\omega^2 -\omega_s^2 \right)}{\omega C'  \left(\omega^2 -\omega_m^2 \right)}
 \end{align}
-اس مساوات کو شکل \حوالہ{شکل_مرتعش_داب_برقی_قلم} پ میں گراف کیا گیا ہے۔حقیقت میں \عددیء{C'} کی قیمت \عددیء{C} کے قیمت سے کئی درجے زیادہ ہوتی ہے (یعنی \عددیء{C' \gg C})۔یوں \عددیء{C_m} کی قیمت \عددیء{C} سے قدر کم  ہوتا ہے جس سے \عددیء{\omega_s} کی قیمت \عددیء{\omega_m} کے قیمت سے قدر کم ہوتا ہے۔ان دو قدرتی تعدد کی قیمتوں میں \عددیء{1 \%} سے بھی کم فرق ہوتا ہے۔مساوات \حوالہ{مساوات_مرتعش_قلم_رکاوٹ} میں دیا برقی رکاوٹ \عددیء{\omega_s < \omega < \omega_m} کے حدود میں بطور امالہ جبکہ \عددیء{\omega< \omega_s} یا \عددیء{\omega>\omega_m} کے حدود میں بطور کپیسٹر  کردار ادا کرتا ہے۔
+اس مساوات کو شکل \حوالہ{شکل_مرتعش_داب_برقی_قلم} پ میں گراف کیا گیا ہے۔حقیقت میں \عددیء{C'} کی قیمت \عددیء{C} کے قیمت سے کئی درجے زیادہ ہوتی ہے (یعنی \عددیء{C' \gg C})۔یوں \عددیء{C_m} کی قیمت \عددیء{C} سے قدر کم  ہوتا ہے جس سے \عددیء{\omega_s} کی قیمت \عددیء{\omega_m} کے قیمت سے قدر کم ہوتا ہے۔ان دو قدرتی گمکی تعدد کی قیمتوں میں \عددیء{1 \%} سے بھی کم فرق ہوتا ہے۔مساوات \حوالہ{مساوات_مرتعش_قلم_رکاوٹ} میں دیا برقی رکاوٹ \عددیء{\omega_s < \omega < \omega_m} کے حدود میں بطور امالہ جبکہ \عددیء{\omega< \omega_s} یا \عددیء{\omega>\omega_m} کے حدود میں بطور کپیسٹر  کردار ادا کرتا ہے۔
 
-مندرجہ بالا تذکرے کو مدِ نظر رکھتے ہوئے ہم دیکھتے ہیں کہ کالپٹس مرتعش میں امالہ کی جگہ قلم استعمال کیا جا سکتا ہے۔شکل \حوالہ{شکل_مرتعش_کالپٹس} میں ایسا کرتے ہوئے  شکل \حوالہ{شکل_کالپٹس_ہارٹلے_مرتعش_قلمی} الف کا \اصطلاح{کالپٹس قلمی مرتعش} حاصل ہوتا ہے۔چونکہ قلم صرف \عددیء{\omega_s < \omega < \omega_m} حدود میں بطور امالہ کردار ادا کرتا ہے لہٰذا ایسا مرتعش صرف اور صرف انہیں حدود کے درمیان ارتعاش پذیر رہ سکتا ہے اور اس کی تعدد انہیں حدود کے درمیان رہے گی۔آپ دیکھ سکتے ہیں کہ \اصطلاح{قلمی مرتعش}\فرہنگ{قلمی مرتعش}\فرہنگ{مرتعش!قلمی}\فرہنگ{crystal oscillator}\حاشیہب{crystal oscillator} کی تعدد صرف اور صرف قلم کی قدرتی تعدد پر منحصر ہے۔اب چونکہ \عددیء{\omega_s \approx \omega_m} ہوتا ہے لہٰذا حقیقت میں ایسے مرتعش کی  \عددیء{\omega \approx \omega_s \approx \omega_m} رہے گی۔چونکہ مساوات \حوالہ{مساوات_مرتعش_ٹرانزسٹر_کالپٹس_تعدد} بھی اس مرتعش کی تعدد دیتا ہے لہٰذا قلمی مرتعش اپنی تعدد \عددیء{\omega_s} اور \عددیء{\omega_m} کے درمیان اس جگہ برقرار رکھے گا جہاں مساوات \حوالہ{مساوات_مرتعش_قلم_رکاوٹ} سے حاصل قلم کی  برقی رکاوٹ (یعنی \عددیء{L}) کو استعمال کرتے ہوئے مساوات \حوالہ{مساوات_مرتعش_ٹرانزسٹر_کالپٹس_تعدد} سے بھی یہی تعدد حاصل ہو۔قلمی مرتعش کے استعمال کا مقصد ایک حتمی تعدد حاصل کرنا ہے جو قلم کو \عددیء{\omega_s \approx \omega_m} حدود میں استعمال کرتے حاصل ہوتا ہے ۔
+مندرجہ بالا تذکرے کو مدِ نظر رکھتے ہوئے ہم دیکھتے ہیں کہ کالپٹس مرتعش میں امالہ کی جگہ قلم استعمال کیا جا سکتا ہے۔شکل \حوالہ{شکل_مرتعش_کالپٹس} میں ایسا کرتے ہوئے  شکل \حوالہ{شکل_کالپٹس_ہارٹلے_مرتعش_قلمی} الف کا \اصطلاح{کالپٹس قلمی مرتعش} حاصل ہوتا ہے۔چونکہ قلم صرف \عددیء{\omega_s < \omega < \omega_m} حدود میں بطور امالہ کردار ادا کرتا ہے لہٰذا ایسا مرتعش صرف اور صرف انہیں حدود کے درمیان ارتعاش پذیر رہ سکتا ہے اور اس کی تعدد انہیں حدود کے درمیان رہے گی۔آپ دیکھ سکتے ہیں کہ \اصطلاح{قلمی مرتعش}\فرہنگ{قلمی مرتعش}\فرہنگ{مرتعش!قلمی}\فرہنگ{crystal oscillator}\حاشیہب{crystal oscillator} کی تعدد صرف اور صرف قلم کی قدرتی گمکی تعدد پر منحصر ہے۔اب چونکہ \عددیء{\omega_s \approx \omega_m} ہوتا ہے لہٰذا حقیقت میں ایسے مرتعش کی  \عددیء{\omega \approx \omega_s \approx \omega_m} رہے گی۔چونکہ مساوات \حوالہ{مساوات_مرتعش_ٹرانزسٹر_کالپٹس_تعدد} بھی اس مرتعش کی تعدد دیتا ہے لہٰذا قلمی مرتعش اپنی تعدد \عددیء{\omega_s} اور \عددیء{\omega_m} کے درمیان اس جگہ برقرار رکھے گا جہاں مساوات \حوالہ{مساوات_مرتعش_قلم_رکاوٹ} سے حاصل قلم کی  برقی رکاوٹ (یعنی \عددیء{L}) کو استعمال کرتے ہوئے مساوات \حوالہ{مساوات_مرتعش_ٹرانزسٹر_کالپٹس_تعدد} سے بھی یہی تعدد حاصل ہو۔قلمی مرتعش کے استعمال کا مقصد ایک حتمی تعدد حاصل کرنا ہے جو قلم کو \عددیء{\omega_s \approx \omega_m} حدود میں استعمال کرتے حاصل ہوتا ہے ۔
 
 شکل \حوالہ{شکل_کالپٹس_ہارٹلے_مرتعش_قلمی} ب میں قلمی ہارٹلے مرتعش دکھایا گیا ہے۔\عددیء{C'} کو نظرانداز کرتے اور قلم کو امالہ تصور کرتے ہوئے  \عددیء{L}، \عددیء{C} اور قلم  ہارٹلے مرتعش کی جانی پہچانی شکل میں جڑے ہیں۔\عددیء{C'} کی قیمت اتنی رکھی جاتی ہے کہ درکار تعدد پر متوازی جڑے \عددیء{L} اور \عددیء{C'} (جنہیں عام فہم میں \عددیء{LC} \اصطلاح{ٹینک}\فرہنگ{ٹینک}\فرہنگ{مرتعش!ٹینک}\فرہنگ{tank}\حاشیہب{tank} کہا جاتا ہے) کا مجموعہ امالہ کا کردار ادا کرے۔عموماً \عددیء{C'} قابل تبدیل کپیسٹر ہوتا ہے جس کی قیمت تبدیل کرتے ہوئے  مرتعش کی تعدد باریکی سے قابو کی جاتی ہے۔چونکہ متوازی جڑے \عددیء{LC} کی برقی رکاوٹ ان کے قدرتی متوازی تعدد پر لامحدود ہوتی ہے لہٰذا \عددیء{LC} ٹینک کی قدرتی متوازی تعدد کو مرتعش کے تعدد کے قریب رکھتے ہوئے  \عددیء{nJFET} کے ڈرین پر بہت زیادہ برقی رکاوٹ حاصل کیا جاتا ہے جس سے  بنیادی ایمپلیفائر کی افزائش زیادہ حاصل ہوتی ہے اور ارتعاشی اشارے کا حیطہ زیادہ سے زیادہ حاصل کرنا ممکن ہوتا ہے۔اس مرتعش میں بیرونی کپیسٹر \عددیء{C} کا استعمال ضروری نہیں۔نہایت بلند تعدد حاصل کرتے وقت اس کپیسٹر کو نسب نہیں کیا جاتا اور \عددیء{nJFET} کی اندرونی کپیسٹر \عددیء{C_{gd}} اور \عددیء{nJFET} کے ڈرین اور گیٹ کے مابین تاروں کے  مابین  بلا ارادہ پائے جانے والے کپیسٹر کو زیر استعمال لایا جاتا ہے۔
 \begin{figure}
